--- a/ZaolisUI/MainWindow.xaml
+++ b/ZaolisUI/MainWindow.xaml
@@ -3,10 +3,97 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:ZaolisUI"
+        xmlns:local="clr-namespace:ZaolisUI" xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="Rental Service by Mykola Zaiets" Height="600" Width="1040" WindowStyle="None"  MaxHeight="600" MaxWidth="1040" MinHeight="450" MinWidth="650" MouseLeftButtonDown="Window_MouseLeftButtonDown" WindowStartupLocation="CenterScreen">
+
+    <WindowChrome.WindowChrome>
+        <WindowChrome CaptionHeight="0"/>
+    </WindowChrome.WindowChrome>
     <Grid>
-        
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="1.8*"/>
+            <ColumnDefinition Width="1*"/>
+        </Grid.ColumnDefinitions>
+        <Border HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
+            <Border.Background>
+                <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
+                    <GradientStop Color="#FF163077" Offset="1"/>
+                    <GradientStop Color="#FF10A3D6"/>
+                </LinearGradientBrush>
+            </Border.Background>
+        </Border>
+        <DockPanel LastChildFill="False" VerticalAlignment="Center" HorizontalAlignment="Stretch">
+            <Label Margin="50,0" Foreground="#DDFFFFFF" FontFamily="Corbel Light" FontSize="48" DockPanel.Dock="Top" >Welcome to</Label>
+            <Label Margin="50,0" Foreground="#DDFFFFFF" FontSize="48" FontWeight="Bold" FontFamily="Segoe UI Symbol" DockPanel.Dock="Top">Zaolis</Label>
+            <Label Margin="50,0" Foreground="#DDFFFFFF" FontFamily="Corbel Light" FontSize="18" DockPanel.Dock="Top" >The best messenger service</Label>
+        </DockPanel>
+        <DockPanel Grid.Column="1">
+            <Grid>
+                <!--LOGIN-->
+                <Grid Name="LOGIN">
+                    <Grid HorizontalAlignment="Right" VerticalAlignment="Top" Margin="10">
+                        <Button Click="TOSignUp_Click" Background="Transparent" BorderBrush="Transparent" Foreground="#FF27AAF0" VerticalAlignment="Top">SIGN UP</Button>
+                        <materialDesign:PackIcon Kind="ArrowRight" Foreground="#FF27AAF0" VerticalAlignment="Center" HorizontalAlignment="Right"/>
+                    </Grid>
+                    <DockPanel Grid.Row="1" Grid.ColumnSpan="2" LastChildFill="False" VerticalAlignment="Center">
+                        <Label DockPanel.Dock="Top" FontSize="16" FontWeight="Bold" Foreground="#27AAF0" Margin="30,30,30,10">LOGIN</Label>
+                        <TextBox Name="logTxtBox_login" DockPanel.Dock="Top" materialDesign:HintAssist.Hint="Login" Height="30" Margin="30,10" CaretBrush="#FF005DFF"></TextBox>
+                        <PasswordBox Name="passwdbox" DockPanel.Dock="Top" materialDesign:HintAssist.Hint="Password" Height="30" Margin="30,10"  CaretBrush="#FF005DFF"></PasswordBox>
+                        <Button Margin="30,10" Background="#FF27AAF0" BorderBrush="#FF27AAF0" DockPanel.Dock="Top" materialDesign:ButtonAssist.CornerRadius="12" Foreground="White" Click="ButtonLogin_Click">LOGIN</Button>
+                        <CheckBox DockPanel.Dock="Top" HorizontalAlignment="Right" Margin="30,5" >Remember me</CheckBox>
+                        <CheckBox Name="chb_alogin" Opacity="0" DockPanel.Dock="Top" HorizontalAlignment="Right" Margin="30,5" Background="Transparent" BorderBrush="Transparent" Foreground="Transparent"></CheckBox>
+                    </DockPanel>
+                </Grid>
+                <!--SIGNUP-->
+                <Grid Name="SignUP" Visibility="Hidden">
+                    <Grid HorizontalAlignment="Right" VerticalAlignment="Top" Margin="10">
+                        <Button Click="TOLogin_Click" Background="Transparent" BorderBrush="Transparent" Foreground="#FF27AAF0">Login</Button>
+                        <materialDesign:PackIcon Kind="ArrowRight" Foreground="#FF27AAF0" VerticalAlignment="Center" HorizontalAlignment="Right"/>
+                    </Grid>
+                    <DockPanel Grid.Row="1" Grid.ColumnSpan="2" LastChildFill="False" VerticalAlignment="Center">
+                        <Label DockPanel.Dock="Top" FontSize="16" FontWeight="Bold" Foreground="#27AAF0" Margin="30,30,30,10">Create account</Label>
+                        <TextBox MaxLength="10" DockPanel.Dock="Top" materialDesign:HintAssist.Hint="Login" Height="30" Margin="30,10" CaretBrush="#FF005DFF">
+                            <TextBox.Text>
+                                <Binding Path ="RegisterModel.Login">
+                                    <Binding.ValidationRules>
+                                        <DataErrorValidationRule />
+                                    </Binding.ValidationRules>
+                                </Binding>
+                            </TextBox.Text>
+                        </TextBox>
+                        <TextBox MaxLength="30" DockPanel.Dock="Top" materialDesign:HintAssist.Hint="Email" Height="30" Margin="30,10" CaretBrush="#FF005DFF">
+                            <TextBox.Text>
+                                <Binding Path ="RegisterModel.Email">
+                                    <Binding.ValidationRules>
+                                        <DataErrorValidationRule />
+                                    </Binding.ValidationRules>
+                                </Binding>
+                            </TextBox.Text>
+                        </TextBox>
+                        <TextBox MaxLength="12" DockPanel.Dock="Top" materialDesign:HintAssist.Hint="Password" Height="30" Margin="30,10"  CaretBrush="#FF005DFF">
+                            <TextBox.Text>
+                                <Binding Path ="RegisterModel.Passwd">
+                                    <Binding.ValidationRules>
+                                        <DataErrorValidationRule />
+                                    </Binding.ValidationRules>
+                                </Binding>
+                            </TextBox.Text>
+                        </TextBox>
+                        <TextBox MaxLength="12" DockPanel.Dock="Top" materialDesign:HintAssist.Hint="Confirm your password" Height="30" Margin="30,10"  CaretBrush="#FF005DFF">
+                            <TextBox.Text>
+                                <Binding Path ="RegisterModel.ConfirmPasswd">
+                                    <Binding.ValidationRules>
+                                        <DataErrorValidationRule />
+                                    </Binding.ValidationRules>
+                                </Binding>
+                            </TextBox.Text>
+                        </TextBox>
+                        <CheckBox IsChecked="{Binding RegisterModel.isAgreeLic, Mode=OneWayToSource}" Name="licAgree" DockPanel.Dock="Top" HorizontalAlignment="Left" Margin="30,5" Background="#FF27AAF0" BorderBrush="#FF27AAF0">I accept the license agreement</CheckBox>
+                        <Button IsEnabled="{Binding RegisterModel.isAllValide}" Margin="30,10" Background="#FF27AAF0" BorderBrush="#FF27AAF0" DockPanel.Dock="Top" materialDesign:ButtonAssist.CornerRadius="12" Foreground="White" Click="ButtonSignUP_Click">Sign Up</Button>
+                    </DockPanel>
+                </Grid>
+            </Grid>
+        </DockPanel>
     </Grid>
 </Window>
