--- a/ZaolisUI/SignIn_SignUp.xaml
+++ b/ZaolisUI/SignIn_SignUp.xaml
@@ -52,7 +52,7 @@
                     </Grid>
                     <DockPanel Grid.Row="1" Grid.ColumnSpan="2" LastChildFill="False" VerticalAlignment="Center">
                         <Label DockPanel.Dock="Top" FontSize="16" FontWeight="Bold" Foreground="#27AAF0" Margin="30,30,30,10">Create account</Label>
-                        <TextBox MaxLength="10" DockPanel.Dock="Top" materialDesign:HintAssist.Hint="Login" Height="30" Margin="30,10" CaretBrush="#FF005DFF">
+                        <TextBox x:Name="logTxtBox_Reg" MaxLength="10" DockPanel.Dock="Top" materialDesign:HintAssist.Hint="Login" Height="30" Margin="30,10" CaretBrush="#FF005DFF">
                             <TextBox.Text>
                                 <Binding Path ="Login">
                                     <Binding.ValidationRules>
@@ -61,7 +61,7 @@
                                 </Binding>
                             </TextBox.Text>
                         </TextBox>
-                        <TextBox MaxLength="30" DockPanel.Dock="Top" materialDesign:HintAssist.Hint="Email" Height="30" Margin="30,10" CaretBrush="#FF005DFF">
+                        <TextBox x:Name="emailTxtBox_reg" MaxLength="30" DockPanel.Dock="Top" materialDesign:HintAssist.Hint="Email" Height="30" Margin="30,10" CaretBrush="#FF005DFF">
                             <TextBox.Text>
                                 <Binding Path ="Email">
                                     <Binding.ValidationRules>
@@ -70,7 +70,7 @@
                                 </Binding>
                             </TextBox.Text>
                         </TextBox>
-                        <TextBox MaxLength="12" DockPanel.Dock="Top" materialDesign:HintAssist.Hint="Password" Height="30" Margin="30,10"  CaretBrush="#FF005DFF">
+                        <TextBox x:Name="psswd_Reg" MaxLength="12" DockPanel.Dock="Top" materialDesign:HintAssist.Hint="Password" Height="30" Margin="30,10"  CaretBrush="#FF005DFF">
                             <TextBox.Text>
                                 <Binding Path ="Passwd">
                                     <Binding.ValidationRules>
