--- a/ZaolisUI/MainMenuZaolis.xaml
+++ b/ZaolisUI/MainMenuZaolis.xaml
@@ -6,7 +6,7 @@
         xmlns:local="clr-namespace:ZaolisUI"
         xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
         mc:Ignorable="d"
-        Title="MainMenuZaolis" Height="600" Width="1040" WindowStyle="None">
+        Title="MainMenuZaolis" Height="600" Width="1040" WindowStyle="None" Closing="Window_Closing">
     <WindowChrome.WindowChrome>
         <WindowChrome CaptionHeight="0"/>
     </WindowChrome.WindowChrome>
