--- a/ZaolisUI/UserInfo.xaml
+++ b/ZaolisUI/UserInfo.xaml
@@ -6,7 +6,7 @@
              xmlns:local="clr-namespace:ZaolisUI"
              xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
              mc:Ignorable="d" 
-             d:DesignHeight="496" d:DesignWidth="325" MinWidth="250" Background="White">
+             d:DesignHeight="496" d:DesignWidth="325" BorderBrush="#FF03A9F4" BorderThickness="1" MinWidth="250" MaxWidth="325" Background="White">
     <DockPanel>
         <!--Button close-->
         <DockPanel Margin="10,0,10,0" DockPanel.Dock="Top" LastChildFill="False">
